# django-aws-api-gateway-websockets

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  LICENSE  MANIFEST.ini  README.md  SECURITY.md  coverage.json  make_migrations.py  make_migrations_settings.py  modules.rst  pyproject.toml  requirements.txt  runtests.py  setup.cfg  tox.ini
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: feature-request.yml  issue.yml
.github/ISSUE_TEMPLATE/workflows/: main.yml
.github/workflows/: codeql-analysis.yml  main.yml  readthedocs.yml
django_aws_api_gateway_websockets/: __init__.py  admin.py  apps.py  mixins.py  models.py  tests.py  urls.py  views.py
django_aws_api_gateway_websockets/management/commands/: cleanupWebSocketTokens.py  clearWebSocketSessions.py  createApiGateway.py  createCustomDomain.py
django_aws_api_gateway_websockets/migrations/: 0001_initial.py  0002_rename_author_websocketsession_user.py  0003_auto_20220706_1018.py  0004_auto_20221208_1227.py  0005_apigatewayadditionalroute_deployed.py  0006_auto_20221215_0847.py  0007_connectionratelimit_websockettoken.py  0008_remove_websockettoken_websocket_t_created_c55db3_idx_and_more.py  0009_alter_connectionratelimit_table_and_more.py
django_aws_api_gateway_websockets/tests/: test_views.py
docs/: Makefile  adding_new_routes.rst  admin.rst  api_gateway_setup.rst  architecture.rst  aws_iam_setup.rst  changelog.rst  cleanup.rst  client_integration.rst  compatibility.rst  concepts.rst  conf.py  configuration.rst  contributing.rst  deployment.rst  django_aws_api_gateway_websockets.management.commands.rst  django_aws_api_gateway_websockets.management.rst  django_aws_api_gateway_websockets.migrations.rst  django_aws_api_gateway_websockets.rst  django_settings.py  example.rst  examples.rst  exposition.rst  faq.rst  index.rst  installation.rst  license.rst  local_development.rst  make_migrations.rst  make_migrations_settings.rst  message_patterns.rst  mixins.rst  models.rst  modules.rst  permissions.rst  quickstart.rst  rate_limiting.rst  reconnecting_websocket.rst  release_process.rst  requirements.txt  (+11 more)
docs/api/: django_aws_api_gateway_websockets.admin.rst  django_aws_api_gateway_websockets.apps.rst  django_aws_api_gateway_websockets.mixins.rst  django_aws_api_gateway_websockets.models.rst  django_aws_api_gateway_websockets.rst  django_aws_api_gateway_websockets.views.rst  index.rst  modules.rst
docs/html/: .buildinfo  changelog.html  contributing.html  django_aws_api_gateway_websockets.html  django_aws_api_gateway_websockets.management.commands.html  django_aws_api_gateway_websockets.management.html  django_aws_api_gateway_websockets.migrations.html  example.html  exposition.html  genindex.html  index.html  installation.html  make_migrations.html  make_migrations_settings.html  mixins.html  modules.html  objects.inv  search.html  searchindex.js  tests.html  tests.management.commands.html  tests.management.html  views.html
docs/html/_sources/: changelog.rst.txt  contributing.rst.txt  django_aws_api_gateway_websockets.migrations.rst.txt  index.rst.txt  make_migrations.rst.txt  modules.rst.txt  tests.management.rst.txt  tests.rst.txt
docs/html/management_commands/: index.html
docs/html/source/: index.html
docs/management_commands/: index.rst
docs/source/: conf.py  index.rst
requirements/: compile.py  py310-django40.txt  py310-django41.txt  py310-django42.txt  py310-django50.txt  py310-django51.txt  py310-django52.txt  py311-django40.txt  py311-django41.txt  py311-django42.txt  py311-django50.txt  py311-django51.txt  py311-django52.txt  py312-django42.txt  py312-django50.txt  py312-django51.txt  py312-django52.txt  py312-django60.txt  py312-django61.txt  py313-django42.txt  py313-django50.txt  py313-django51.txt  py313-django52.txt  py313-django60.txt  py313-django61.txt  py314-django42.txt  py314-django50.txt  py314-django51.txt  py314-django52.txt  py314-django60.txt  py315-django52.txt  py315-django60.txt  py36-django22.txt  py36-django31.txt  py36-django32.txt  py37-django30.txt  py37-django31.txt  py38-django22.txt  py38-django30.txt  py38-django31.txt  (+13 more)
tests/: settings.py  test_admin.py  test_mixins.py  test_models.py  test_views.py
tests/management/commands/: test_cleanupWebSocketTokens.py  test_clearWebSocketSessions.py  test_createApiGateway.py  test_createCustomDomain.py
