[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
skip = [
".gitignore", ".dockerignore"
]

[project]
name = "django-aws-api-gateway-websockets"
version = "1.1.1"
authors = [
  { name="Steven Mapes", email="steve@stevenmapes.com" },
]
license = {text = "MIT"}
description = "Created to allow Django projects to be used as a HTTP backend for AWS API Gateway websockets"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Django>=4.2.0"
]
keywords = [
    "Django",
    "WebSockets",
    "AWS",
    "API Gateway",
    "Amazon WebServices"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
"Homepage" = "https://github.com/StevenMapes/django-aws-api-gateway-websockets"
"Change log" = "https://github.com/StevenMapes/django-aws-api-gateway-websockets/blob/main/CHANGELOG.md"
"Twitter" = "https://twitter.com/stevenamapes"
