[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.isort]
skip = [
".gitignore", ".dockerignore"
]

[project]
name = "django-aws-api-gateway-websockets"
version = "1.4.0"
description = "Created to allow Django projects to be used as a HTTP backend for AWS API Gateway websockets"
readme = "README.md"
authors = [
  { name="Steven Mapes", email="steve@stevenmapes.com" },
]
license = {file = "LICENSE" }
requires-python = ">=3.9"
keywords = [
    "Django",
    "WebSockets",
    "AWS",
    "API Gateway",
    "Amazon WebServices"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "Django>=4.2.1",
    "boto3>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "flake8",
]

[project.urls]
Documentation = "https://django-aws-api-gateway-websockets.readthedocs.io/"
Changelog = "https://github.com/StevenMapes/django-aws-api-gateway-websockets/blob/main/CHANGELOG.md"
Twitter = "https://twitter.com/stevenamapes"
Homepage = "https://github.com/StevenMapes/django-aws-api-gateway-websockets"

# NEW
[tool.coverage.run]
branch = true
parallel = true
source = ["django_aws_api_gateway_websockets"]

[tool.coverage.paths]
source = [
    "django_aws_api_gateway_websockets",
    ".tox/*/site-packages"
]

[tool.coverage.report]
show_missing = true

[tool.flake8]
max-line-length = 80
select = ["E", "F", "W", "B", "B950", "C", "I", "TYP"]
ignore = ["E203", "E501", "W503"]

