[metadata]
name = django-aws-api-gateway-websockets
version = 0.0.1
description = Created to allow Django projects to be used as a HTTP backend for AWS API Gateway websockets
long_description = file: README.md
long_description_content_type = text/markdown
author = Steven Mapes
author_email = steve@jigsawtech.co.uk
url = https://github.com/StevenMapes/django-aws-api-gateway-websockets
project_urls =
    Documentation = https://github.com/StevenMapes/django-aws-api-gateway-websockets
    Changelog = https://github.com/StevenMapes/django-aws-api-gateway-websockets/blob/main/CHANGELOG.md
    Twitter = https://twitter.com/stevenamapes
license = BSD-3-Clause
keywords =
    Django
    WebSockets
    AWS
    API Gateway
    Amazon WebServices
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD-3-Clause License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires = Django>=2.2
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where = src

[coverage:run]
branch = True
source = django_aws_api_gateway_websockets

[coverage:paths]
source =
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 80
select = E,F,W,B,B950,C,I,TYP
ignore = E203,E501,W503